# katapayadi

./: .gitignore  Makefile  README.md  README.rst  requirements.txt  setup.cfg  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
katapayadi/: __init__.py  core.py
katapayadi/templates/: katapayadi.html
libindic/katapayadi/: core.py  expose.py
libindic/katapayadi/templates/: katapayadi.html  libindic.katapayadi.html
libindic/katapayadi/tests/: test_katapayadi.py
tests/: katapayadi_test.py
