[metadata]
name = libindic-katapayadi
author = Santhosh Thottingal
author-email = santhosh.thottingal@gmail.com
summary = Decode katapayadi number system
license = LGPL-3.0
description-file =
  README.rst
home-page = https://libindic.org/katapayadi
requires-python = >=2.7
classifier =
  Development Status :: 5 - Production/Stable
  License :: DFSG approved
  License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
  Operating System :: OS Independent
  Intended Audience :: Developers
  Intended Audience :: Information Technology
  Programming Language :: Python

[files]
namespace_packages = libindic
packages = libindic

[build-sphinx]
all_files = 1
source-dir = docs

[entry_points]
libindic.api.rest =
    get_number = katapayadi.expose:getnumber

[wheel]
universal=1
    
